fix spacing/sizing on 'an-assessment' box

--- a/src/pages/user-dashboard/user-dashboard.scss
+++ b/src/pages/user-dashboard/user-dashboard.scss
@@ -6,7 +6,7 @@ page-user-dashboard {
     background-color: black;
     // margin-top: 100px;
     // padding: 20px 20px 5px 20px;
-    margin: 83px auto 0 auto;
+    margin: 76px auto 0 auto;
     display: flex;
     position: relative;
     min-height: 100px;
@@ -121,7 +121,7 @@ page-user-dashboard {
     .an-assessment {
       display: block;
       width: 97.5%;
-      margin: 6px;
+      margin: 15px 6px 35px 6px;
       // background-color: white;
       // border-top: 1px solid white;
       // border-bottom: 1px solid white;
